@@ -1,0 +1,5 @@
+from zope.interface import Interface
+
+class ISignalsView(Interface):
+    """Marker interface for SignalsView
+    """
