@@ -1,0 +1,82 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+
+<body>
+    <div metal:fill-slot="main">
+    <metal:main-macro define-macro="main">
+        <h1 tal:content="object_title" class="documentFirstHeading">
+            Title or id
+        </h1>
+
+        <div metal:use-macro="here/document_actions/macros/document_actions">
+            Document actions (print, sendto etc)
+        </div>
+
+        <div class="visualClear"></div>
+
+        <p class="documentDescription"
+           tal:content="here/Description"
+           tal:condition="here/Description">
+            Description
+        </p>
+
+        <div class="visualClear"></div>
+
+        <div class="signals-section">
+            <h2>Articles</h2>
+            <div tal:define="folderContents python:here.restrictedTraverse('chapters').getFolderContents({'portal_type': ['Article']})">
+                <div class="photoAlbumEntry" tal:repeat="item folderContents">
+                    <a tal:attributes="href item/getURL; title item/Description">
+                        <span class="photoAlbumEntryWrapper">
+                            <img tal:attributes="src string:${item/getURL}/image_thumb"/>
+                        </span>
+                        <span class="photoAlbumEntryTitle" tal:content="item/Title"></span>
+                    </a>
+                </div>
+            </div>
+            <div class="visualClear"></div>
+        </div>
+
+        <div class="signals-section">
+            <h2>Eyewitness stories</h2>
+            <div tal:define="folderContents python:here.restrictedTraverse('galleries').getFolderContents({'portal_type': ['EyewitnessStory']})">
+                <div class="photoAlbumEntry" tal:repeat="item folderContents">
+                    <a tal:attributes="href item/getURL; title item/Description">
+                        <span class="photoAlbumEntryWrapper">
+                            <img tal:attributes="src string:${item/getURL}/image_thumb"/>
+                        </span>
+                        <span class="photoAlbumEntryTitle" tal:content="item/Title"></span>
+                    </a>
+                </div>
+            </div>
+            <div class="visualClear"></div>
+        </div>
+
+        <div class="signals-section">
+            <h2>Signals from previous years</h2>
+            <div tal:define="folderContents view/old_reports">
+                <div class="photoAlbumEntry" tal:repeat="item folderContents">
+                    <a tal:attributes="href item/getURL; title item/Description">
+                        <span class="photoAlbumEntryWrapper">
+                            <img tal:attributes="src string:${item/getURL}/image_thumb"/>
+                        </span>
+                        <span class="photoAlbumEntryTitle" tal:content="item/Title"></span>
+                    </a>
+                </div>
+            </div>
+            <div class="visualClear"></div>
+        </div>
+
+        <div class="signals-section">
+            <h2>More</h2>
+            <ul>
+                <li><a tal:attributes="href string:${here/absolute_url}/about">What is signals?</a></li>
+            </ul>
+        </div>
+
+    </metal:main-macro>
+    </div>
+</body>
+</html>
